@@ -172,6 +172,7 @@ AC_DEFINE_UNQUOTED([MOBI_INLINE], [$def_inline],
                    [How to obtain function inlining.])
 
 # Check --enable-encryption
+ENCRYPTION_OPT=""
 AC_MSG_CHECKING([whether enable encryption])
 AC_ARG_ENABLE([encryption],
 AS_HELP_STRING([--enable-encryption],
@@ -186,7 +187,9 @@ AC_MSG_RESULT($encryption)
 AM_CONDITIONAL(USE_ENCRYPTION,[test x$encryption = xyes])
 if test x$encryption = xyes; then
 AC_DEFINE([USE_ENCRYPTION], 1, [Enable encryption])
+ENCRYPTION_OPT="yes"
 fi
+AC_SUBST(ENCRYPTION_OPT)
 
 # Check --enable-debug
 AC_MSG_CHECKING([whether enable debugging])
@@ -253,5 +256,6 @@ AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([libmobi.pc])
 AC_CONFIG_FILES([src/Makefile])
 AC_CONFIG_FILES([tools/Makefile])
+AC_CONFIG_FILES([tools/mobitool.1])
 
 AC_OUTPUT
